[gd_scene load_steps=4 format=2]

[ext_resource path="res://graphics/themes/wesnoth_theme.tres" type="Theme" id=1]
[ext_resource path="res://source/lobby/Lobby.gd" type="Script" id=2]
[ext_resource path="res://graphics/images/interface/panels.png" type="Texture" id=3]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 20, 20 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Setup" type="Control" parent="."]
anchor_bottom = 1.0
margin_top = 9.0
margin_right = 240.0
margin_bottom = -7.0
rect_min_size = Vector2( 240, 140 )

[node name="VBoxContainer" type="VBoxContainer" parent="Setup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_right = 16.0
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Setup/VBoxContainer"]
margin_top = 937.0
margin_right = 242.0
margin_bottom = 973.0

[node name="Name" type="LineEdit" parent="Setup/VBoxContainer/HBoxContainer"]
margin_right = 242.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
placeholder_text = "Name"

[node name="HBoxContainer2" type="HBoxContainer" parent="Setup/VBoxContainer"]
margin_top = 981.0
margin_right = 242.0
margin_bottom = 981.0

[node name="IP" type="LineEdit" parent="Setup/VBoxContainer"]
margin_top = 989.0
margin_right = 242.0
margin_bottom = 1025.0
rect_min_size = Vector2( 0, 36 )
text = "127.0.0.1"
placeholder_text = "IP"

[node name="HBoxContainer3" type="HBoxContainer" parent="Setup/VBoxContainer"]
margin_top = 1033.0
margin_right = 242.0
margin_bottom = 1064.0
size_flags_horizontal = 3
alignment = 1

[node name="Join" type="Button" parent="Setup/VBoxContainer/HBoxContainer3"]
margin_left = 17.0
margin_right = 117.0
margin_bottom = 31.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = "Join"

[node name="Host" type="Button" parent="Setup/VBoxContainer/HBoxContainer3"]
margin_left = 125.0
margin_right = 225.0
margin_bottom = 31.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = "Host"

[node name="Leave" type="Button" parent="Setup/VBoxContainer"]
visible = false
margin_top = 984.0
margin_right = 242.0
margin_bottom = 1020.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = "Leave"

[node name="Back" type="Button" parent="Setup/VBoxContainer"]
visible = false
margin_top = 1033.0
margin_right = 242.0
margin_bottom = 1064.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = "Back"

[node name="Room" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 269.0
margin_top = 50.0
margin_right = -20.0
margin_bottom = -51.0
texture = ExtResource( 3 )
region_rect = Rect2( 20, 0, 20, 20 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Display" type="RichTextLabel" parent="Room"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -8.0
margin_bottom = -6.0

[node name="Input" type="LineEdit" parent="Room"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 36 )
placeholder_text = "Chat"
[connection signal="pressed" from="Setup/VBoxContainer/HBoxContainer3/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="Setup/VBoxContainer/HBoxContainer3/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Setup/VBoxContainer/Leave" to="." method="_on_Leave_pressed"]
[connection signal="pressed" from="Setup/VBoxContainer/Back" to="." method="_on_Back_pressed"]
